02-Secure-the-Dashboard-With-Middleware/ingress-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-api
  namespace: kube-system
spec:
  rules:
  - host: dashboard.traefik.10.68.0.70.sslip.io
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /api/
        pathType: Prefix
